src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply bg-zinc-50 dark:bg-zinc-950 text-zinc-900 dark:text-zinc-100 antialiased;
  }
}

.custom-scrollbar::-webkit-scrollbar {
  width: 6px;
}

.custom-scrollbar::-webkit-scrollbar-track {
  @apply bg-transparent;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  @apply bg-zinc-200 dark:bg-zinc-800 rounded-full;
}

.custom-scrollbar::-webkit-scrollbar-thumb:hover {
  @apply bg-zinc-300 dark:bg-zinc-700;
}

/* Map fix */
.leaflet-container {
  font-family: inherit;
}

.leaflet-popup-content-wrapper {
  @apply !rounded-2xl !shadow-2xl !border !border-zinc-100 dark:!border-zinc-800 dark:!bg-zinc-900 dark:!text-white;
}

.leaflet-popup-tip {
  @apply !bg-white dark:!bg-zinc-900;
}

/* Phone Input Dark Theme */
.phone-input-dark .PhoneInputInput {
  background: transparent;
  border: none;
  color: white;
  outline: none;
  font-size: 0.875rem;
}

.phone-input-dark .PhoneInputInput::placeholder {
  color: rgb(71 85 105); /* slate-600 */
}

.phone-input-dark .PhoneInputCountrySelect {
  background: #1e1e1e;
  color: white;
}

.phone-input-dark .PhoneInputCountryIcon {
  border: none;
  box-shadow: none;
}

